Initial additional of google AdSense

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ad Page</title>
-  <style>
-    body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
-    img { max-width: 100%; height: auto; }
-  </style>
-</head>
 <body>
-  <h1>Check Out Our Latest Product!</h1>
-  <img src="banner.jpg" alt="Ad Banner">
-  <p><a href="https://example.com">Click here to learn more</a></p>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4644970306069806"
+       crossorigin="anonymous"></script>
+  <!-- Ice_Puzzle_Ad -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-4644970306069806"
+       data-ad-slot="8105088205"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
 </body>
 </html>
