--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4644970306069806"
      crossorigin="anonymous"></script>
+
+  <!-- monetag -->
+  <script src="https://fpyf8.com/88/tag.min.js" data-zone="159032" async data-cfasync="false"></script>
+  
   <title>Ice Puzzle Ad</title>
 </head>
 <body>
