--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- monetag -->
+  <script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('vemtoutcheeg.com',9617406,document.createElement('script'))</script>
+  
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4644970306069806"
      crossorigin="anonymous"></script>
   <title>Ice Puzzle Ad</title>
 </head>
 <body>
-  <!-- monetag -->
-  <script src="https://fpyf8.com/88/tag.min.js" data-zone="159032" async data-cfasync="false"></script>
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4644970306069806"
        crossorigin="anonymous"></script>
