--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
   <title>Ice Puzzle Ad</title>
 </head>
 <body>
-  
+  <!-- adsterra banner -->
+  <script type="text/javascript">
+	atOptions = {
+		'key' : 'd9f314ca1042a596da62e19fddef0a68',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+  </script>
+  <script type="text/javascript" src="//www.highperformanceformat.com/d9f314ca1042a596da62e19fddef0a68/invoke.js"></script>
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4644970306069806"
        crossorigin="anonymous"></script>
