--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 	};
   </script>
   <script type="text/javascript" src="//www.highperformanceformat.com/d9f314ca1042a596da62e19fddef0a68/invoke.js"></script>
+
+  <!-- adsterra native ad -->
+  <script async="async" data-cfasync="false" src="//pl27248148.profitableratecpm.com/b5c8f76d552b4779e580021ebb905ec6/invoke.js"></script>
+  <div id="container-b5c8f76d552b4779e580021ebb905ec6"></div>
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4644970306069806"
        crossorigin="anonymous"></script>
