--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="https://www.highperformanceformat.com/81e01291a8c14587f6f92b5d743cbde0/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/81e01291a8c14587f6f92b5d743cbde0/invoke.js"></script>
   </p>
 
   <!-- adsterra native ad -->
