--- a/index.html
+++ b/index.html
@@ -2,31 +2,13 @@
 <html lang="en">
 <head>
   <!-- monetag  interstitial -->
-  <!-- script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',9617494,document.createElement('script'))</script -->
+  <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',9617465,document.createElement('script'))</script>
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4644970306069806"
      crossorigin="anonymous"></script>
   <title>Ice Puzzle Ad</title>
 </head>
 <body>
-  <p>
-      <!-- adsterra banner -->
-      <script type="text/javascript">
-	atOptions = {
-		'key' : '81e01291a8c14587f6f92b5d743cbde0',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/81e01291a8c14587f6f92b5d743cbde0/invoke.js"></script>
-  </p>
-
-  <!-- adsterra native ad -->
-  
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4644970306069806"
-       crossorigin="anonymous"></script>
   <!-- Ice_Puzzle_Ad -->
   <ins class="adsbygoogle"
        style="display:block"
