--- a/index.html
+++ b/index.html
@@ -2,22 +2,10 @@
 <html lang="en">
 <head>
   <!-- monetag  interstitial -->
-  <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',9617465,document.createElement('script'))</script>
-  
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4644970306069806"
-     crossorigin="anonymous"></script>
+  <script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('vemtoutcheeg.com',9617406,document.createElement('script'))</script>
   <title>Ice Puzzle Ad</title>
 </head>
 <body>
   <!-- Ice_Puzzle_Ad -->
-  <ins class="adsbygoogle"
-       style="display:block"
-       data-ad-client="ca-pub-4644970306069806"
-       data-ad-slot="8105088205"
-       data-ad-format="auto"
-       data-full-width-responsive="true"></ins>
-  <script>
-       (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
 </body>
 </html>
