--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     try {
         const s = document.createElement('script');
-        s.src = 'https://vemtoutcheeg.com/400/9617406';
+        s.src = 'https://vemtoutcheeg.com/400/9617465';
         s.onerror = function() {
             const errMsg = document.createElement('div');
             errMsg.id = 'ad-load-error';
@@ -29,7 +29,7 @@
         (document.body || document.documentElement).appendChild(errMsg);
     }
 
-    setTimeout(runAdLoader, 120000); // retry every 2 minutes
+    setTimeout(runAdLoader, 25000); // retry every 25 seconds
 })();
 </script>
 
