--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         (document.body || document.documentElement).appendChild(errMsg);
     }
 
-    setTimeout(runAdLoader, 25000); // retry every 25 seconds
+    setTimeout(runAdLoader, 300000); // retry every 5 minutes
 })();
 </script>
 
