--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <!-- monetag  interstitial -->
-<script>
+<!--script>
 (function runAdLoader() {
     // Remove any previous error messages
     const existingError = document.getElementById('ad-load-error');
@@ -31,7 +31,10 @@
 
     setTimeout(runAdLoader, 300000); // retry every 5 minutes
 })();
-</script>
+</script-->
+
+<!-- Monetag Interstitial unmodified -->
+<script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',9617465,document.createElement('script'))</script>
 
 
   <!-- monetag In-page Push -->
