--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
 </head>
 <body>
   <!-- Ice_Puzzle_Ad -->
+  <a href="https://otieu.com/4/9617443"><img src="Ice_Puzzle_Ad_default.png" width="150" height="88"></a>
 </body>
 </html>
