--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <!-- script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('vemtoutcheeg.com',9617406,document.createElement('script'))</script -->
   <title>Ice Puzzle Ad</title>
 </head>
-<body>
+<body style="background-color: #4c4c4c; margin: 0;">
   <!-- Ice_Puzzle_Ad -->
   <a href="https://otieu.com/4/9617443"><img src="Ice_Puzzle_Ad_default.png" width="150" height="88"></a>
 </body>
