--- a/index.html
+++ b/index.html
@@ -1,38 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- monetag  interstitial -->
-<!--script>
-(function runAdLoader() {
-    // Remove any previous error messages
-    const existingError = document.getElementById('ad-load-error');
-    if (existingError) existingError.remove();
-
-    try {
-        const s = document.createElement('script');
-        s.src = 'https://vemtoutcheeg.com/400/9617465';
-        s.onerror = function() {
-            const errMsg = document.createElement('div');
-            errMsg.id = 'ad-load-error';
-            errMsg.style.color = 'red';
-            errMsg.style.fontWeight = 'bold';
-            errMsg.textContent = 'Ad load failed for: ' + s.src;
-            (document.body || document.documentElement).appendChild(errMsg);
-        };
-        (document.body || document.documentElement).appendChild(s);
-    } catch (e) {
-        const errMsg = document.createElement('div');
-        errMsg.id = 'ad-load-error';
-        errMsg.style.color = 'red';
-        errMsg.style.fontWeight = 'bold';
-        errMsg.textContent = 'Ad load failed: ' + e.message;
-        (document.body || document.documentElement).appendChild(errMsg);
+<style>
+    body {
+      background-color: #4c4c4c;
+      margin: 0;
+      height: 100vh; /* Full viewport height */
+      display: flex;
+      justify-content: center; /* Horizontal center */
+      align-items: center;     /* Vertical center */
     }
+</style>
 
-    setTimeout(runAdLoader, 300000); // retry every 5 minutes
-})();
-</script-->
-
+    
 <!-- Monetag Interstitial unmodified -->
 <!--script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',9617465,document.createElement('script'))</script-->
 
@@ -48,6 +28,6 @@
 </head>
 <body style="background-color: #4c4c4c; margin: 0;">
   <!-- Ice_Puzzle_Ad -->
-  <a href="https://otieu.com/4/9617443"><img src="Ice_Puzzle_Ad_default.png" width="150" height="88"></a>
+  <a href="https://otieu.com/4/9617443"><img src="Ice_Puzzle_Ad_default.png" width="263" height="154"></a>
 </body>
 </html>
