--- a/index.html
+++ b/index.html
@@ -2,13 +2,8 @@
 <html lang="en">
 <head>
 <style>
-    body {
-      background-color: #4c4c4c;
-      margin: 0;
-      height: 100vh; /* Full viewport height */
-      display: flex;
-      justify-content: center; /* Horizontal center */
-      align-items: center;     /* Vertical center */
+    .ad {
+        margin: auto;
     }
 </style>
 
@@ -28,6 +23,8 @@
 </head>
 <body style="background-color: #4c4c4c; margin: 0;">
   <!-- Ice_Puzzle_Ad -->
-  <a href="https://otieu.com/4/9617443"><img src="Ice_Puzzle_Ad_default.png" width="263" height="154"></a>
+  <div class="ad">
+    <a href="https://otieu.com/4/9617443"><img src="Ice_Puzzle_Ad_default.png" width="263" height="154"></a>
+  </div>
 </body>
 </html>
