--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
   <!-- script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('vemtoutcheeg.com',9617406,document.createElement('script'))</script -->
   <title>Ice Puzzle Ad</title>
 </head>
-<body style="background-color: #4c4c4c; margin: 0;">
+<body style="background-color: #4c4c4c;">
   <!-- Ice_Puzzle_Ad -->
-  <div class="ad">
-    <a href="https://otieu.com/4/9617443"><img src="Ice_Puzzle_Ad_default.png" width="263" height="154"></a>
-  </div>
+    <a href="https://otieu.com/4/9617443"><img src="Ice_Puzzle_Ad_default.png" width="262" height="153"></a>
 </body>
 </html>
