--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('vemtoutcheeg.com',9617406,document.createElement('script'))</script -->
   <title>Ice Puzzle Ad</title>
 </head>
-<body style="background-color: #4c4c4c;">
+<body style="background-color: #FF0000;">
   <!-- Ice_Puzzle_Ad -->
     <a href="https://otieu.com/4/9617443"><img src="Ice_Puzzle_Ad_default.png" width="225" height="132"></a>
 </body>
