--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
 <head>
 <style>
+    body {
+        margin: 0;
+        overflow:hidden;
+        text-overflow:clip;
+        white-space: nowrap;
+    }
     .ad {
-        margin: auto;
+        
     }
 </style>
 
