--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         overflow:hidden;
         text-overflow:clip;
         white-space: nowrap;
+        display: flex;
+        justify-content: center; /* Horizontal center */
+        align-items: center;     /* Vertical center */
     }
     .ad {
         
@@ -29,6 +32,6 @@
 </head>
 <body style="background-color: #FF0000;">
   <!-- Ice_Puzzle_Ad -->
-    <a href="https://otieu.com/4/9617443"><img src="Ice_Puzzle_Ad_default.png" width="225" height="132"></a>
+    <a href="https://otieu.com/4/9617443"><img src="Ice_Puzzle_Ad_default.png" width="260" height="152"></a>
 </body>
 </html>
