--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <style>
     body {
         margin: 0;
+        height: 100vh;
         overflow:hidden;
         text-overflow:clip;
         white-space: nowrap;
