--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
   <!-- script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('vemtoutcheeg.com',9617406,document.createElement('script'))</script -->
   <title>Ice Puzzle Ad</title>
 </head>
-<body style="background-color: #FF0000;">
+<body style="background-color: #4c4c4c;">
   <!-- Ice_Puzzle_Ad -->
-    <a href="https://otieu.com/4/9617443"><img src="Ice_Puzzle_Ad_default.png" width="264" height="156"></a>
+  <div style="margin: 1px 0px 0px 0px>
+      <a href="https://otieu.com/4/9617443"><img src="Ice_Puzzle_Ad_default.png" width="264" height="156"></a>
+  </div>
 </body>
 </html>
