--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body style="background-color: #4c4c4c;">
   <!-- Ice_Puzzle_Ad -->
   <div>
-      <a href="https://otieu.com/4/9617443" style="margin: 15px 0px 0px 0px">
+      <a href="https://otieu.com/4/9617443">
           <img src="Ice_Puzzle_Ad_default.png" width="264" height="156">
       </a>
   </div>
