--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- Ice_Puzzle_Ad -->
   <div>
       <a href="https://otieu.com/4/9617443">
-          <img src="Ice_Puzzle_Ad_HD.png" width="264" height="156">
+          <img src="Ice_Puzzle_Ad_HD_less_outline" width="264" height="156">
       </a>
   </div>
 </body>
