--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <body style="background-color: #4c4c4c;">
   <!-- Ice_Puzzle_Ad -->
   <div>
-      <a href="https://otieu.com/4/9617443.png">
-          <img src="Ice_Puzzle_Ad_HD_less_outline" width="264" height="156">
+      <a href="https://otieu.com/4/9617443">
+          <img src="Ice_Puzzle_Ad_HD_less_outline.png" width="264" height="156">
       </a>
   </div>
 </body>
