--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ waitAndClickCloseButton = () =>
   	});
 };
 
-//waitAndClickCloseButton();
+waitAndClickCloseButton();
 </script>
     
 </body>
