--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ waitAndClickCloseButton = () =>
   														 bubbles: true,
   														 cancelable: true
 													   }));
-		  } else { console.log('Could not find div');
+		  } else { console.log('Could not find div'); }
           processNextButton();
        }, 15000);
     }
