--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ waitAndClickCloseButton = () =>
   	});
 };
 
-waitAndClickCloseButton();
+//waitAndClickCloseButton();
 </script>
     
 </body>
