--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@ waitAndClickCloseButton = () =>
 		  console.log('Finished waiting');
           if(mainDiv) 
 		  {
-			  console.log('Found div. Clicking');
+			  console.log('Found div. Clicking: ', mainDiv);
 			  const rect = target.getBoundingClientRect();
 			  const centerX = (rect.left + rect.width) / 5.0;
 			  const centerY = (rect.top + rect.height) * .75;
+			  console.log('Clicking @ (', centerX, ',' ,centerY, ')' );
 			  mainDiv.dispatchEvent(new MouseEvent('click', 
 													   { view: window,
   														 bubbles: true,
