--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ waitAndClickCloseButton = () =>
 					    pressure: 0.5
 					  };
 
-			  	el.dispatchEvent(new PointerEvent('pointerdown', eventProps);
-			    el.dispatchEvent(new PointerEvent('pointerup', eventProps);
+			  	el.dispatchEvent(new PointerEvent('pointerdown', eventProps));
+			    el.dispatchEvent(new PointerEvent('pointerup', eventProps));
 			  
 		  } else { console.log('Could not find div'); }
           processNextButton();
