--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ waitAndClickCloseButton = () =>
 					  };
 
 			  	el.dispatchEvent(new PointerEvent('pointerdown', eventProps));
-			    setTimeout(el.dispatchEvent(new PointerEvent('pointerup', eventProps)), 100);
+			    setTimeout(() => {el.dispatchEvent(new PointerEvent('pointerup', eventProps)); el.dispatchEvent(new PointerEvent('click', eventProps));}, 100);
 			  
 		  } else { console.log('Could not find div'); }
           processNextButton();
