--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ waitAndClickCloseButton = () =>
 				  const eventProps = {
 					    bubbles: true,
 					    cancelable: true,
-					    clientX: centerX,
-					    clientY: centerY,
+					    //clientX: centerX,
+					    //clientY: centerY,
 					    view: window,
 					    pointerId: 1,
 					    pointerType: 'mouse',
