--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ waitAndClickCloseButton = () =>
 	              clientY
 	              });
 				  
-             	  target.dispatchEvent(evt);
+             	  mainDiv.dispatchEvent(evt);
               }
 
 			// Simulate tap
